tests/baselines/reference/modularizeLibrary_Dom.iterable.errors.txt
tests/cases/compiler/modularizeLibrary_Dom.iterable.ts(1,23): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/compiler/modularizeLibrary_Dom.iterable.ts (1 errors) ====
    for (const element of document.getElementsByTagName("a")) {
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        element.href;
    }